--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">CleverChat</string>
+    <string name="app_name">Clever Chat</string>
+    <string name="title_chatroom_list">@string/app_name</string>
 </resources>
