--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,11 @@
 <resources>
     <string name="app_name">Clever Chat</string>
     <string name="title_chatroom_list">@string/app_name</string>
+    <string name="title_activity_splashscreen">SplashscreenActivity</string>
+    <string name="menu_item_account">Mon compte</string>
+    <string name="title_activity_account">Mon compte</string>
+    <string name="action_settings">Settings</string>
+    <string name="form_label_display_name">Display name</string>
+    <string name="form_label_email">Email</string>
+    <string name="button_sign_out">Sign out</string>
 </resources>
